# electionguard-api-python

./: .dockerignore  .gitignore  .pylintrc  404.html  Dockerfile  ElectionGuard-SDK-DotNetCore-Reference-Web-API.sln  Makefile  Pipfile  README.md  docker-compose.azure.yml  docker-compose.dev.yml  docker-compose.support.yml  docker-compose.yml  index.html  mkdocs.yml  mongo-init.js  mypy.ini  pyproject.toml  search.html  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generic_issue.md
.github/workflows/: azure_deploy.yml  pr-workflow.yml  publish-workflow.yml  pull_request.yml  release.yml
.postman/: ElectionGuard API.postman_collection.json  postman_collection.json  postman_environment.local.json
ElectionGuard.Tools/: BallotStyleMap.cs  ContestMap.cs  ContestTally.cs  ElectionGuard.Tools.csproj  ElectionMap.cs  IElectionMapper.cs  VXMapper.cs  VotingWorksMapper.cs
ElectionGuard.Tools.Tests/: ElectionGuard.Tools.Tests.csproj  VXMapperTests.cs  VotingWorksMapperTests.cs
ElectionGuard.WebAPI/: Dockerfile  ElectionGuard.WebAPI.csproj  Program.cs  Startup.cs
ElectionGuard.WebAPI/Controllers/: ElectionController.cs  ElectionGuardController.cs
ElectionGuard.WebAPI/Models/: BallotEncryptRequest.cs  BallotRecordRequest.cs  ElectionRequest.cs  ElectionResponse.cs  EncryptBallotRequest.cs  EncryptBallotResponse.cs  EncryptBallotsRequest.cs  EncryptedBallot.cs  InitializeEncryptionRequest.cs  InitializeEncryptionResponse.cs  LoadBallotsRequest.cs  LoadBallotsResponse.cs  RecordBallotsRequest.cs  RecordBallotsResponse.cs  TallyVotesRequest.cs  TallyVotesResponse.cs  TrusteeKey.cs
ElectionGuard.WebAPI/Properties/: launchSettings.json
ElectionGuard.WebAPI/Utilities/: ConfigFileService.cs
VotingWorks.Ballot/: Ballot.cs  BallotStyle.cs  BallotTrackerConfig.cs  BallotType.cs  Candidate.cs  CandidateContest.cs  CandidateVote.cs  Contest.cs  ContestType.cs  County.cs  CustomJsonConverter.cs  District.cs  Election.cs  ICandidateVoteTally.cs  IYesNoVoteTally.cs  Party.cs  Precinct.cs  VoteTally.cs  VotingWorks.Ballot.csproj  WriteInCandidateTally.cs  YesNoContest.cs
app/: logging.conf  main.py
app/api/graphql/: app.py
app/api/graphql-demo/: README.md  schema.py
app/api/graphql/queries/: query.py
app/api/graphql/schema/: __init__.py
app/api/graphql/types/: type.py
app/api/schema/: __init__.py
app/api/v1/: api.py  routes.py  tags.py
app/api/v1/auth/: __init__.py  auth.py  routes.py  user.py
app/api/v1/common/: routes.py  type_mapper.py
app/api/v1/endpoints/: ballot.py  election.py  guardian.py  key.py  ping.py  tally.py
app/api/v1/guardian/: ballot.py  guardian.py  key.py  routes.py  tally.py  tally_decrypt.py
app/api/v1/mediator/: key.py  (+12 more)
app/api/v1_1/: routes.py
app/api/v2/: routes.py  tags.py
app/core/: __init__.py  auth.py  ballot.py  client.py  config.py  election.py  guardian.py  key_ceremony.py  key_guardian.py  manifest.py  queue.py  repository.py  scheduler.py  schema.py  settings.py  tally.py  tally_decrypt.py  user.py
app/data/: ballot-encrypted-simple.json  ballot-plaintext-simple.json  ballot.json  manifest.json  old-ballot.json  plaintext_ballot_ballot-1663ab54-e95f-11eb-bd0c-acde48001122.json  plaintext_ballot_ballot-1663bbee-e95f-11eb-bd0c-acde48001122.json  plaintext_ballot_ballot-1663cdc8-e95f-11eb-bd0c-acde48001122.json  plaintext_ballot_ballot-1663d854-e95f-11eb-bd0c-acde48001122.json  plaintext_ballot_ballot-1663e3e4-e95f-11eb-bd0c-acde48001122.json
app/models/: __init__.py  auxiliary_key_pair.py  auxiliary_public_key.py  election_key_pair.py  election_key_pair_request.py  guardian.py  guardian_backup.py  guardian_backup_request.py  guardian_request.py  key.py
app/utils/: __init__.py  serialize.py
data/: README.md  election.config.json  election.json  tallies.sample.response.json
data/election_results/: encrypted-ballots_2020_1_30  registered-ballots  tallies1580425396
data/examples/: delete_ballot_file_example.sh  encrypt_ballot_example.sh
docs/: index.md
package/linux-x64/: electionguard-api.service  install.sh  install_dependencies.sh  package.sh
scripts/: Create-Windows-Service.ps1
search/: search_index.json
tests/: .dockerignore  ElectionGuard Web Api.postman_collection.json  docker-compose.yml  manual.md
tests/integration/: api_utils.py  conftest.py  guardian_api.py  mediator_api.py  test_end_to_end_election.py
tests/integration/data/: ballot-encrypted-simple.json  ballot.json  election_description.json  test_data.py
tests/postman/: Dockerfile  ElectionGuard API Tests.postman_collection.json  Local Environment.postman_environment.json  docker-compose.yml
(+26 files in other folders)
