[tool.poetry]
name = "electionguard-web-api"
version = "1.0.0"
description = "ElectionGuard Web Api: Support for e2e verified elections."
license = "MIT"
authors = ["Microsoft Corporation <electionguard@microsoft.com>"]
readme = "README.md"
homepage = "https://microsoft.github.io/electionguard-web-api/"
repository = "https://github.com/microsoft/electionguard-web-api"
documentation = "https://electionguard-web-api.readthedocs.io/"

[tool.poetry.dependencies]
python = "~=3.8"
electionguard = "~1.1"
fastapi = "~0.61"
uvicorn = "~0.11"

[tool.poetry.dev-dependencies]
black = { version = "^20", allow-prereleases = true }
mkdocs = "^1"
mypy = "^0.782"
pylint = "^2"
pytest = "^6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py38']
include = '\.pyi?$'

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true

[tool.pylint.'MESSAGES CONTROL']
disable = "duplicate-code, missing-module-docstring, missing-class-docstring, missing-function-docstring, logging-fstring-interpolation"
