[tool.poetry]
name = "electionguard-api-python"
version = "1.0.5"
description = "ElectionGuard Web Api: Support for e2e verified elections."
license = "MIT"
authors = ["Microsoft Corporation <electionguard@microsoft.com>"]
readme = "README.md"
homepage = "https://microsoft.github.io/electionguard-api-python/"
repository = "https://github.com/microsoft/electionguard-api-python"
documentation = "https://electionguard-api-python.readthedocs.io/"

[tool.poetry.dependencies]
python = "~=3.9.5"
fastapi = "~0.65"
uvicorn = "~0.11"
pika = "1.2.0"
pymongo = "~3.11.4"
electionguard = "1.2.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"


[tool.poetry.dev-dependencies]
black = "21.7b0"
mkdocs = "^1"
mypy = "^0.782"
pylint = "^2"
pytest = "^6"
requests = "^2.24.0"

[tool.black]
target-version = ['py39']
include = '\.pyi?$'

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = '''
    duplicate-code,
    fixme,
    invalid-name,
    logging-fstring-interpolation,
    missing-module-docstring, 
    missing-class-docstring, 
    missing-function-docstring, 
    
    no-value-for-parameter,
    redefined-builtin,
    too-few-public-methods,
    too-many-arguments,
    too-many-branches,
    too-many-function-args,
    too-many-lines,
    too-many-locals,
    too-many-nested-blocks,
    unnecessary-lambda
    '''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true

